[gd_scene load_steps=6 format=3 uid="uid://dldpvh3xlydmt"]

[ext_resource type="Script" uid="uid://b27kohkrxvxcl" path="res://scripts/piolet.gd" id="1_xcfou"]
[ext_resource type="Texture2D" uid="uid://b27501yrjobte" path="res://sprites/piolet.png" id="2_36es6"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5a0b6"]
radius = 20.0
height = 70.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xcfou"]
radius = 28.0
height = 92.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ylelw"]
radius = 18.0
height = 70.0

[node name="piolet" type="RigidBody2D" groups=["piolet"]]
collision_layer = 2
gravity_scale = 0.0
script = ExtResource("1_xcfou")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_5a0b6")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-1, 16)
scale = Vector2(1.1333333, 2.0400004)
texture = ExtResource("2_36es6")

[node name="mouse_collision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="mouse_collision"]
shape = SubResource("CapsuleShape2D_xcfou")

[node name="piolet_collision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="piolet_collision"]
shape = SubResource("CapsuleShape2D_ylelw")

[connection signal="area_entered" from="mouse_collision" to="." method="_on_mouse_collision_area_entered"]
[connection signal="area_exited" from="mouse_collision" to="." method="_on_mouse_collision_area_exited"]
[connection signal="area_entered" from="piolet_collision" to="." method="_on_piolet_collision_area_entered"]
[connection signal="area_exited" from="piolet_collision" to="." method="_on_piolet_collision_area_exited"]
